hphp/hack/test/typecheck/function_pointer/reified_meth_caller2.php
<?hh

interface MyClass {
  public function foo<reify T>(): void;
}

function test(): void {
  meth_caller(MyClass::class, 'foo');
}
